--- a/src/summary_matrics.ipynb
+++ b/src/summary_matrics.ipynb
@@ -32,15 +32,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = '/home/yimiaofeng/PycharmProjects/SLBench/SLBenchmark_git/matrics/'\n",
-    "nsms = os.listdir(base_path)\n",
-    "methods = os.listdir('')\n",
-    "nsm = 'random'\n",
-    "method = 'sl2mf'\n",
-    "path = f'/home/yimiaofeng/PycharmProjects/SLBench/SLBenchmark_git/matrics/{nsm}/{method}'\n",
-    "res_name = os.listdir(path)\n",
-    "# res_name\n",
-    "pd.read_csv(f'{path}/{res_name[1]}').loc[2,:].values[3:].astype(float)"
+    "# base_path = '../results/metrics/'\n",
+    "# nsms = os.listdir(base_path)\n",
+    "# methods = os.listdir('')\n",
+    "# nsm = 'random'\n",
+    "# method = 'sl2mf'\n",
+    "# path = f'../results/metrics/{nsm}/{method}'\n",
+    "# res_name = os.listdir(path)\n",
+    "# # res_name\n",
+    "# pd.read_csv(f'{path}/{res_name[1]}').loc[2,:].values[3:].astype(float)"
    ]
   },
   {
@@ -49,17 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "base_path = '../results/metrics/'\n",
     "summary_res_df = pd.DataFrame(columns=['AUROC', 'AUPR', 'F1', 'N10', 'N20', 'N50', 'R10', 'R20', 'R50', 'P10', 'P20', 'P50', 'M10', 'M20', 'M50'],\n",
-    "                              index = ['CV1,1','CV2,1','CV3,1','CV1,5','CV2,5','CV3,5','CV1,20','CV2,20','CV3,20','CV1,50','CV2,50','CV3,50'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_path = '/home/yimiaofeng/PycharmProjects/SLBench/SLBenchmark_git/matrics/'\n",
+    "                              index = ['CV1,1','CV2,1','CV3,1','CV1,5','CV2,5','CV3,5','CV1,20','CV2,20','CV3,20','CV1,50','CV2,50','CV3,50'])\n",
     "nsms = os.listdir(base_path)\n",
     "res_dict = {}\n",
     "for nsm in nsms:\n",
@@ -76,7 +68,7 @@
     "            x_id = str(cvx)+','+str(pnr)\n",
     "            res_dict[nsm][method].loc[x_id,:] = res\n",
     "        # res_dict[nsm][method] = res_dict[nsm][method][['AUROC', 'AUPR', 'F1', 'N10', 'N20', 'N50', 'R10', 'R20', 'R50', 'P10', 'P20', 'P50', 'M10', 'M20', 'M50']]\n",
-    "        res_dict[nsm][method].to_csv(f'../summary/summary_{nsm}_{method}.csv')\n"
+    "        res_dict[nsm][method].to_csv(f'../results/summary/summary_{nsm}_{method}.csv')\n"
    ]
   },
   {
@@ -142,17 +134,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Score distribution"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score distribution"
+    "#### Note: the following code is used to generate the score distribution figure for the paper\n",
+    "#### **Must use parameter --save_mat to successfully run the following code**"
    ]
   },
   {
@@ -162,7 +155,7 @@
    "outputs": [],
    "source": [
     "nsm = 'random'\n",
-    "base_path = f'/data/yimiaofeng/SLBench/{nsm}_score_mat/'\n",
+    "base_path = f'../results/{nsm}_score_mat/'\n",
     "models = os.listdir(base_path)\n",
     "res_names = os.listdir(f'{base_path}/{models[-2]}')\n",
     "res_names_classify = [i for i in res_names if 'classify' in i]\n",
@@ -175,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_samples, neg_samples = np.load('/home/yimiaofeng/PycharmProjects/SLBench/SLBenchmark_git/data/data_split/CV1_1.npy',allow_pickle=True)\n",
+    "pos_samples, neg_samples = np.load('../data/data_split/CV1_1.npy',allow_pickle=True)\n",
     "_, _, train_pos_kfold, test_pos_kfold = pos_samples\n",
     "_, _, train_neg_kfold, test_neg_kfold = neg_samples"
    ]
@@ -240,7 +233,7 @@
    "outputs": [],
    "source": [
     "def extract_data(cv,pnr,fold_num,base_path,model):\n",
-    "    pos_samples, neg_samples = np.load(f'/home/yimiaofeng/PycharmProjects/SLBench/SLBenchmark_git/data/data_split/{cv}_{int(1/float(pnr))}.npy',allow_pickle=True)\n",
+    "    pos_samples, neg_samples = np.load(f'../data/data_split/{cv}_{int(1/float(pnr))}.npy',allow_pickle=True)\n",
     "    _, _, train_pos_kfold, test_pos_kfold = pos_samples\n",
     "    _, _, train_neg_kfold, test_neg_kfold = neg_samples\n",
     "    \n",
@@ -324,7 +317,7 @@
    "outputs": [],
    "source": [
     "nsm = 'random'\n",
-    "base_path = f'/data/yimiaofeng/SLBench/{nsm}_score_mat/'\n",
+    "base_path = f'../results/{nsm}_score_mat/'\n",
     "models = ['pilsl']\n",
     "# models = ['gcatsl','slmgae','sl2mf','cmfw','ddgcn','grsmf','kg4sl','mge4sl','nsf4sl','ptgnn']\n",
     "# fig, axes = plt.subplots(1, 6, figsize=(18, 3))\n",
@@ -358,7 +351,7 @@
     "cvx = ['CV1', 'CV2', 'CV3']\n",
     "pnrs = [1.0,0.2,0.05,0.02]\n",
     "nsm = 'random'\n",
-    "base_path = f'../results/score_mats/{nsm}_score_mat/'\n",
+    "base_path = f'../results/{nsm}_score_mat/'\n",
     "models = ['gcatsl','slmgae','sl2mf','cmfw','ddgcn','grsmf','kg4sl','mge4sl','nsf4sl','ptgnn']\n",
     "# fig_pos = [[0,0],[0,3],[0,4],[0,5],[0,1],[0,2]]\n",
     "fig_pos = [[0,0],[1,0],[1,1],[1,2],[0,1],[0,2]]\n",
@@ -401,7 +394,7 @@
     "\n",
     "        # plt.tight_layout()\n",
     "        # plt.show()\n",
-    "        plt.savefig(f\"../score_dist/{model}_{fold_num}_Random.svg\",format='svg', bbox_inches='tight')"
+    "        plt.savefig(f\"../results/score_dist/{model}_{fold_num}_Random.svg\",format='svg', bbox_inches='tight')"
    ]
   },
   {
@@ -432,40 +425,6 @@
     "test_pos_score = score_mat[test_pos_kfold[fold_num][:,0],test_pos_kfold[fold_num][:,1]]\n",
     "test_neg_score = score_mat[test_neg_kfold[fold_num][:,0],test_neg_kfold[fold_num][:,1]]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_pos_score.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum(train_pos_score>1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score_mat.max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
